Fixing broken styles

--- a/packages/flamenco/src/styles/_app_base.sass
+++ b/packages/flamenco/src/styles/_app_base.sass
@@ -9,6 +9,227 @@ body
 	&[data-context="dashboard"]
 		nav.sidebar .navbar-item.flamenco
 			+sidebar-button-active
-
+	&[data-context="task"]
+		nav.sidebar .navbar-item.tasks
+			+sidebar-button-active
+	&[data-context="job"]
+		nav.sidebar .navbar-item.jobs
+			+sidebar-button-active
 		#col_main .col_header
 			box-shadow: none
+
+nav.sidebar
+	a.navbar-item
+		&.tasks, &.jobs
+			text-transform: initial
+			font-size: .85em
+
+.input-group
+	width: 100%
+	display: flex
+	align-items: center
+
+	label
+		padding-right: 10px
+		min-width: 80px
+		white-space: nowrap
+
+	&.select_multiple
+		margin-bottom: 10px
+
+.input-group
+	input, textarea, select
+		margin-top: 10px
+		margin-bottom: 10px
+		width: 100%
+
+	button
+		&#item-save
+			+button($color-success, 3px)
+
+/* Attract specific table tweaks */
+.item-list
+	overflow-x: auto
+	.table
+		background-color: white
+	.table-row:hover
+		background-color: $color-background-light
+
+	.table-cell
+		&.item-status
+			width: 5px
+			height: 100%
+			border-bottom: none
+	.table-head
+		.table-cell
+			text-align: center
+
+			&.highlight .collapser
+				color: $color-primary-dark
+
+			&.item-thumbnail
+				width: 120px
+
+			span.collapser
+				cursor: pointer
+				width: 100%
+				display: inline-block
+				padding: 5px
+
+			&:hover
+				span.collapser
+					color: $color-primary
+
+	.table-body
+		.table-row
+			@include status-color-property(background-color, ' .item-status', '')
+
+		.table-cell
+			text-align: center
+
+			&.active
+				background-color: $color-background
+
+			&.highlight
+				background-color: rgba(white, .5)
+
+				&.task-type a:before
+					transform: translate(-50%, -50%) scale(1.2)
+
+			&.item-name
+				text-align: left
+				position: relative
+				height: 100%
+				a
+					display: flex
+					padding: 5px 10px
+					color: $color-text-dark-primary
+
+					span
+						margin: auto 0
+						line-height: 1.1em
+
+			&.item-thumbnail
+				border-left: none
+				border-bottom: none
+				img
+					transition: opacity 150ms ease-in-out
+
+			&.item-progress a
+				color: $color-text-dark-secondary
+
+			&.item-priority a
+				color: $color-text-dark-secondary
+
+.item-list-header
+	a
+		color: $color-text-dark
+		+text-overflow-ellipsis
+	a.item-project
+		color: $color-text-dark-secondary
+		margin-right: 10px
+
+/* General style for activities in all places */
+.d-activity
+	font-size: .9em
+
+	$activity-highlight-color: #00cc9f
+	ul
+		cursor: default
+		padding: 5px
+		color: $color-text-dark-primary
+		list-style: none
+
+		li
+			padding: 0 10px 7px 10px
+			position: relative
+
+			span.date
+				color: darken($activity-highlight-color, 5%)
+
+			/* Left Dot */
+			&:after
+				content: ''
+				display: block
+				position: absolute
+				top: 6px
+				left: -3px
+				width: 5px
+				height: 5px
+				border-radius: 50%
+				background-color: $color-background-light
+				border: thin solid $activity-highlight-color
+				transition: all 250ms ease-in-out
+
+			/* Left Line */
+			&:before
+				content: ''
+				display: block
+				position: absolute
+				top: 10px
+				left: -1px
+				width: 1px
+				height: 100%
+				background-color: $activity-highlight-color
+				transition: all 250ms ease-in-out
+
+			&:last-child
+				&:before
+					background-color: transparent
+
+		span.actor
+			padding: 0 5px
+			color: $color-text-dark
+
+		img.actor-avatar
+			width: 16px
+			height: 16px
+			border-radius: 50%
+			margin-right: 5px
+			position: relative
+			top: -2px
+
+
+.flamenco-box
+	.item-id
+		padding: 8px
+		margin-left: 10px
+		width: 40px
+		border: thin solid transparent
+		background-color: white
+		color: $color-text-dark-secondary
+		box-shadow: none
+		border-color: $color-text-dark-hint
+
+		&:hover
+			color: $color-text-dark-primary
+			border-color: $color-text-dark-primary
+
+
+#item-details
+	overflow-x: hidden
+
+	.item-details-empty
+		display: flex
+		align-items: center
+		justify-content: center
+		width: 100%
+		height: 100%
+		color: rgba($color-text-dark-hint, .5)
+		cursor: default
+		padding: 15px 10px
+		font:
+			size: 2em
+			weight: 100
+
+#item-view-feed
+	padding: 10px
+	color: $color-text-dark-primary
+	pre
+		margin: 15px auto
+
+	#comments-container
+		margin-top: 0
+
+	#col_main
+		width: 100%
